# deqalloc

./: .gitignore  CMakeLists.txt  README.md  deqalloc.h  libdeqalloc.cpp
benchmarks/: CMakeLists.txt  build_allocators.sh  run_experiments.py  run_perf.py
deqalloc/heaps/: all.h
deqalloc/heaps/buildingblock/: all.h  boundedfreelistheap.h  twolistheap.h
deqalloc/heaps/combining/: all.h  minisegheap.h
deqalloc/heaps/objectrep/: all.h  headerheap.h  sizeheap.h
deqalloc/heaps/special/: all.h  bumpalloc.h  listheap.h
deqalloc/heaps/threads/: all.h  dequeheap.h  threadlocalstack.h
deqalloc/heaps/top/: all.h  mmapheap.h  segmentheap.h
deqalloc/heaps/utility/: all.h  concurrentprofileheap.h  traceheap.h
deqalloc/threads/: all.h  faa_epoch.h  threadmanager.h
deqalloc/threads/structures/: continuousarray.h  fcdeque.h  lockingdeque.h
deqalloc/utility/: all.h  assert.h  freesllist.h  random.h  types.h
deqalloc/wrappers/: gnuwrapper.cpp  wrapper.cpp
examples/deqalloc/: CMakeLists.txt  libdeqalloc.cpp  makeallocgraph.py
examples/deqalloc/unit/: CMakeLists.txt  unit_tests.cpp
examples/deqalloc/unit/structures/: HarrisLinkedListTest.hpp
examples/deqalloc/unit/threads/: uepochTest.h
heaps/buildingblock/: all.h  boundedfreelistheap.h  twolistheap.h
heaps/combining/: all.h  minisegheap.h
heaps/special/: all.h  bumpalloc.h  listheap.h
heaps/threads/: all.h  dequeheap.h  threadlocalstack.h
heaps/top/: all.h  mmapheap.h  segmentheap.h
heaps/utility/: all.h  concurrentprofileheap.h  traceheap.h
plots/: plot_allocators.py  plot_perf.py
threads/: all.h  epoch.h  faa_epoch.h  threadmanager.h
threads/structures/: HarrisLinkedList.h  continuousarray.h  memorystealingdeque.h
timings/: temperature.csv
timings/clervaux/: temperature.csv
timings/clervaux/flock/: ablation_localseglist  hugepages  sizes  thread_perc  threads  updates  upserts
timings/clervaux/setbench/: ablation_localseglist  hugepages  sizes  threads  trackers  updates
timings/flock/: ablation_localseglist
timings/larochette/: flock  temperature.csv
timings/larochette/03-11-2026/: flock  setbench
timings/larochette/03-16-2026/: flock
timings/larochette/flock/: ablation_localseglist  ablation_remotefree_batchsize  hugepages  sizes  thread_perc  threads  updates  upserts
timings/larochette/old/: temperature.csv
timings/larochette/old/03-16-2026/: setbench
timings/larochette/old/03-16-2026/03-16-2026/: setbench
timings/larochette/old/03-24-2026/flock/: ablation_deque  upserts
timings/larochette/old/03-24-2026/setbench/: ablation_localseglist
timings/larochette/old/03-28-2026/: temperature.csv
timings/larochette/old/03-28-2026/flock/: ablation_localseglist_sizes  ablation_localseglist_threads  ablation_remotefree  sizes  upserts
timings/larochette/old/03-28-2026/setbench/: trackers  updates
timings/larochette/old/flock/: ablation_deque
timings/larochette/perf/: results.csv
timings/larochette/setbench/: ablation_localseglist_sizes  ablation_localseglist_threads  hugepages  sizes  threads  trackers  updates
timings/setbench/: ablation_localseglist
timings/test/: setbench
timings/test2/: flock
timings/vianden/: temperature.csv
timings/vianden/flock/: ablation_localseglist  hugepages  sizes  thread_perc  threads  updates  upserts
timings/vianden/setbench/: ablation_localseglist  hugepages  sizes  threads  trackers  updates
ubench/: README.md
ubench/hugepagebench/: .gitignore  Makefile  run.sh  tlb_bench.c
ubench/remotefrees/: .gitignore  Makefile  free-benchmark.c  run_tests.sh
ubench/shareddsbench/: .gitignore  Makefile  shareddsbench.c
unit/: CMakeLists.txt  unit_tests.cpp
unit/threads/: uepochTest.h
utility/: all.h  assert.h  freesllist.h  tprintf.h  types.h
wrappers/: wrapper.cpp
